--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "otmane",
   "version": "1.0.1",
-  "description": "",
+  "description": "Start Learn Node Js With Cli",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -20,6 +20,6 @@
     "otmane": "index.js"
   },
   "dependencies": {
-    "clear-any-console": "^1.16.2"
+    "cli-welcome": "^2.2.2"
   }
 }
