--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   },
   "dependencies": {
     "cli-welcome": "^2.2.2"
-  }
+  },
+  "keywords": [
+    "1","2","3","4","5","6","7","8","9"
+  ]
 }
